# bexp

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  VERSIONING.md  docker-compose.yml
.cacher/: cache.db
.claude/: settings.json
.github/workflows/: ci.yml
.vexp/: .gitignore  config.toml  index.db
benches/: graph.rs  indexing.rs  search.rs
src/: config.rs  error.rs  health.rs  lib.rs  main.rs  metrics.rs  types.rs
src/capsule/: budget.rs  cache.rs  generator.rs  intent.rs  mod.rs  search.rs
src/db/: mod.rs  queries.rs  schema.rs  tokenizer.rs
src/git/: hooks.rs  mod.rs
src/graph/: builder.rs  centrality.rs  mod.rs  traversal.rs
src/indexer/: extractor.rs  mod.rs  parser.rs  resolver.rs  scanner.rs  structural_diff.rs  watcher.rs
src/indexer/languages/: c_lang.rs  cpp.rs  dotenv.rs  html.rs  javascript.rs  mod.rs  python.rs  rust_lang.rs  typescript.rs
src/lsp/: client.rs  resolver.rs
src/mcp/: mod.rs  server.rs  test_helpers.rs  validation.rs
src/mcp/tools/: capsule.rs  env_lineage.rs  flow.rs  get_config.rs  graph_stats.rs  impact.rs  list_files.rs  list_sessions.rs  lsp.rs  memory_search.rs  mod.rs  observe.rs  query_edges.rs  query_nodes.rs  reindex.rs  session.rs  setup.rs  skeleton.rs  staleness.rs  status.rs  tests.rs  unresolved.rs
src/memory/: consolidation.rs  mod.rs  observation.rs  search.rs  session.rs
src/skeleton/: mod.rs  token_counter.rs  transformer.rs
src/skeleton/languages/: mod.rs
src/workspace/: cross_ref.rs  mod.rs
templates/: CLAUDE-vexp.md  mcp.json
tests/: indexer_integration.rs  integration_pipeline.rs
