[package]
name = "bexp"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Local-first context engine for AI coding agents"

[dependencies]
rmcp = { version = "0.16", features = ["server", "transport-io", "macros"] }
tree-sitter = "0.26"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-html = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
rusqlite = { version = "0.32", features = ["bundled", "blob", "backup", "functions"] }
rusqlite_migration = "1"
petgraph = "0.6"
tiktoken-rs = "0.6"
rayon = "1.10"
notify = "7"
notify-debouncer-mini = "0.5"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
walkdir = "2"
globset = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
toml = "0.8"
schemars = "1"
lsp-types = "0.97"
crossbeam-channel = "0.5"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "indexing"
harness = false

[[bench]]
name = "search"
harness = false

[[bench]]
name = "graph"
harness = false
